Adding new comments

--- a/index.html
+++ b/index.html
@@ -55,11 +55,30 @@
     });
 
       var CommentBox = React.createClass({
+        getInitialState: function() {
+          return {data: []};
+        },
+        loadCommentsFromServer: function() {
+          $.ajax({
+            url: this.props.url,
+            dataType: 'json',
+            success: function(data) {
+              this.setState({data: data});
+            }.bind(this),
+            error: function(xhr, status, err) {
+              console.error(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+        },
+        componentDidMount: function() {
+          this.loadCommentsFromServer();
+          setInterval(this.loadCommentsFromServer, this.props.pollInterval);
+        },
         render: function() {
           return (
             <div className="commentBox">
               <h1>Comments</h1>
-              <CommentList data={this.props.data} />
+              <CommentList data={this.state.data} />
               <CommentForm />
             </div>
           );
@@ -67,7 +86,7 @@
       });
 
       React.render(
-        <CommentBox url="comments.json" />,
+        <CommentBox url="json/comments.json" pollInterval={200000} />,
         document.getElementById('content')
       );
 
