add comment form

--- a/index.html
+++ b/index.html
@@ -45,11 +45,24 @@
     })
 
     var CommentForm = React.createClass({
+      handleSubmit: function(e) {
+        e.preventDefault();
+        var author = this.refs.author.getDOMNode().value.trim();
+        var text = this.refs.text.getDOMNode().value.trim();
+        if (!text || !author) {
+          return;
+        }
+        this.props.onCommentSubmit({author: author, text: text});
+        this.refs.author.getDOMNode().value = '';
+        this.refs.text.getDOMNode().value = '';
+      },
       render: function() {
         return (
-          <div className="commentForm">
-            Hello, world! I am a CommentForm.
-          </div>
+          <form className="commentForm" onSubmit={this.handleSubmit}>
+            <input type="text" placeholder="Your name" ref="author" />
+            <input type="text" placeholder="Say something..." ref="text" />
+            <input type="submit" value="Post" />
+          </form>
         );
       }
     });
@@ -70,6 +83,9 @@
             }.bind(this)
           });
         },
+        handleCommentSubmit: function(comment) {
+          // TODO: submit to the server and refresh the list
+        },
         componentDidMount: function() {
           this.loadCommentsFromServer();
           setInterval(this.loadCommentsFromServer, this.props.pollInterval);
@@ -79,7 +95,7 @@
             <div className="commentBox">
               <h1>Comments</h1>
               <CommentList data={this.state.data} />
-              <CommentForm />
+              <CommentForm onCommentSubmit={this.handleCommentSubmit} />
             </div>
           );
         }
